<resources>
    <string name="app_name">¡¡Emotions!!</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_act_main_menu">ActMainMenu</string>
    <string name="mainMenuBarUpTitle">¿Qué quieres hacer?</string>
    <string name="emotion_cry">Llorando</string>
    <string name="emotion_angry">Enfado</string>
    <string name="emotion_sad">Triste</string>
    <string name="emotion_happy">Feliz</string>
    <string name="game1_title">¿Cómo se está sintiendo?</string>
    <string name="Game1_description">Selecciona la emoción que está sintiendo la persona de la imagen.</string>
    <string name="emotion_fear">Miedo</string>
    <string name="game2_title">¿Quién está escuchando ésta canción?</string>
    <string name="Game2_tvPlayIndicator">¡¡Reproduce la canción!! >> </string>
    <string name="Settings_optionsText">Adáptame</string>
    <string name="Settings_AboutText">Acerca de mí</string>
    <string name="OptionsSettings_Title">¡Adáptame!</string>
    <string name="OptionsSettings_PlayerDescription">¿Qué canción quieres que suene al iniciar?</string>
    <string name="OptionsSettings_NameText">¿Cómo te llamas?</string>
    <string name="OptionsSettings_name_help_text">Me llamo...</string>
    <string name="OptionsSettings_calification_title">¿Te gusta el juego?</string>
    <string name="OptionsSettings_calification_description">Valora CsimEmotions indicando, en estrellas, si estás contento con el juego. 1 estrella significa que no te gusta nada y 5 estrellas significa que te gusta mucho. ¡Puedes volver y cambiar esta calificación cuando quieras!.</string>
    <string name="OptionsSettings_player_text_help_1">Primero selecciona qué tipo de música quieres escuchar</string>
    <string name="OptionsSettings_player_text_help_2">Y ahora, utiliza este reproductor para escuchar canciones</string>
    <string name="OptionsSettings_player_text_help_3">Cuando te guste una canción, ¡quédatela!</string>
    <string name="OptionsSettings_player_saveSongButton_text">¡Me la quedo!</string>
    <string name="OptionsSettings_player_savedSongToast">¡Vale, canción guardada! La escucharás la próxima vez que me inicies</string>
    <string name="OptionSettings_btNicknameSave">Guardar</string>
    <string name="OptionsSettings_saveRanking">¡Evalúame!</string>
    <string name="Game31_TitleText">¡Atrapa la música!</string>
    <string name="Game31_descriptionText">Haz clic en un sonido y adivina quién lo está escuchando</string>
    <string name="Game4_title">¡¡Arrastra la canción hasta su destino!!</string>
    <string name="Game5_Title">¡Mueve tu tablet para resolver el juego!</string>
    <string name="Settings_export">Exportar datos</string>
    <string name="Settings_export_file_intent_title">Exportar archivo .csv</string>
    <string name="Settings_eeg_enable">Activar modo EEG</string>
    <string name="Settings_eeg_disable">Desactivar modo EEG</string>
    <string name="Settings_eeg_ok">Aceptar</string>
    <string name="Settings_eeg_cancel">Cancelar</string>
    <string name="Settings_eeg_title">¿Cómo deseas llamarte?</string>
    <string name="GameDialog_OK">Aceptar</string>
    <string name="GameDialog_OKSave">No repetir este mensaje</string>
    <string name="GameDialog_letsPlay">¡A jugar!</string>
    <string name="GameDialog_title">Instrucciones</string>
    <string name="Game6_title">¡Lee y escucha el cuento!. Después, relaciona lo que pasa con lo que siente cada persona</string>
    <string name="fCenterContent_newLevel">Siguiente nivel</string>
    <string name="fCentercontent_backLevel">Anterior nivel</string>
    <string name="FAbout_descriptionText1">Un videojuego creado por:</string>
    <string name="FAbout_AuthorName">Jorge Chamorro Padial</string>
    <string name="FAbout_mail">jorgechp@gmail.com</string>
    <string name="FAbout_descriptionText2">Como Trabajo de Fin de Máster para el Máster de Sistemas Cognitivos y Medios Interactivos</string>
    <string name="FAbout_descriptionText3">Supervisado por:</string>
    <string name="FAbout_Supervisor1">Rafael Ramirez-Melendez</string>
    <string name="FAbout_Supervisor2">Davinia Hernández-Leo</string>
    <string name="FAbout_descriptionText4">Agradecimientos</string>
    <string name="FAbout_descriptionText5">Derechos de autor</string>
    <string name="FAbout_freepiks_rights">Designed by Freepik</string>
    <string name="FAbout_icons8_rights">Designed by icons8 (Creative Commons Attribution-NoDerivs 3.0 Unported)</string>
    <string name="FAbout_Description6">Éste videojuego se encuentra licenciado, a excepción de los iconos y sonidos anteriormente mencionados, bajo una licencia:</string>
    <string name="FAbout_LicenseSound">FeedBack: positive sound: Limetoe  badass victory</string>
    <string name="FAbout_Fonts">Este programa utiliza las fuentes Action_Man_Bold y AndikaNewBasic </string>
    <string name="FOptions_settings_saveNickModalTitle">Contraseña para cambio de nick</string>
    <string name="FOptions_settings_saveNickModalAccept">Aceptar</string>
    <string name="FOptions_settings_saveNickModalCancel">Cancelar</string>
    <string name="FOptions_settings_saveNickToastAccepted">Cambio de nick aceptado. Contraseña correcta</string>
    <string name="FOptions_settings_saveNickToastCanceled">Cambio de nick NO ACEPTADO. Contraseña INCORRECTA</string>
    <string name="FOptions_settings_saveNickToastCanceledNoInput">Cambio de nick NO ACEPTADO. El nick está vacío</string>
    <string name="FOptions_settings_newNickTitle">Nuevo nick</string>
    />

    />
</resources>
