<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.F_About">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:background="@drawable/giftly">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="GAME TITLE"
                    android:id="@+id/FAbout_GameTitle"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="@dimen/gameTitle" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_descriptionText1"
                    android:id="@+id/FAbout_Description1" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_AuthorName"
                    android:autoLink="web|email"
                    android:id="@+id/FAbout_AuthorName"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_mail"
                    android:id="@+id/FAbout_mail"
                    android:layout_gravity="center"
                    android:textColor="#3f3dd2" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_descriptionText2"
                    android:id="@+id/FAbout_Description2" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="225dp"
                    android:layout_height="106dp"
                    android:id="@+id/FAbout_UPFLogo"
                    android:background="@drawable/logo_upf"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_descriptionText3"
                    android:id="@+id/FAbout_Description3"
                    android:textSize="@dimen/gameTitle"
                    android:textColor="#623a3a" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_Supervisor1"
                    android:id="@+id/FAbout_Supervisor1"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_Supervisor2"
                    android:id="@+id/FAbout_Supervisor2"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_descriptionText4"
                    android:id="@+id/FAbout_Description4"
                    android:textSize="@dimen/gameTitle"
                    android:textColor="#623a3a" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_descriptionText5"
                    android:id="@+id/FAbout_Description5"
                    android:textSize="@dimen/gameTitle"
                    android:textColor="#623a3a" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:background="@mipmap/ic_barup_play" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:background="@mipmap/ic_export"
                    android:layout_toRightOf="@+id/imageView" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:background="@mipmap/ic_feedback_bien"
                    android:layout_toRightOf="@+id/imageView2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:background="@mipmap/ic_feedback_mal"
                    android:layout_toRightOf="@+id/imageView3" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:background="@mipmap/ic_game6_continue"
                    android:layout_toRightOf="@+id/imageView4" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:background="@mipmap/ic_play"
                    android:layout_toRightOf="@+id/imageView5" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7"
                    android:background="@mipmap/ic_player_next"
                    android:layout_toRightOf="@+id/imageView6" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView8"
                    android:background="@mipmap/ic_player_back"
                    android:layout_toRightOf="@+id/imageView7" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView9"
                    android:background="@mipmap/ic_optionssettings_eeg"
                    android:layout_toRightOf="@+id/imageView8" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView10"
                    android:background="@mipmap/ic_game2_easy"
                    android:layout_toRightOf="@+id/imageView9" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView11"
                    android:background="@mipmap/ic_player_stop"
                    android:layout_toRightOf="@+id/imageView10" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView13"
                    android:background="@mipmap/ic_step"
                    android:layout_toRightOf="@+id/imageView12" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_freepiks_rights"
                    android:id="@+id/FAbout_freepik_rights"
                    android:layout_gravity="center" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView12"
                    android:background="@mipmap/ic_settings" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_icons8_rights"
                    android:id="@+id/FAbout_icons8_rights"
                    android:layout_gravity="center" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_LicenseSound"
                    android:id="@+id/textView3" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_Fonts"
                    android:id="@+id/textView5" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/FAbout_Description6"
                    android:id="@+id/FAbout_Description6" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView15"
                    android:layout_gravity="center"
                    android:background="@drawable/byncsa" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
